--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,6 @@
     <!-- <load src="partials/" /> -->
 
     <!------------ JS ----------->
-    <!-- <script type="module" src="/main.js"></script> -->
+    <!-- <script type="module" src="./src/js/main.js"></script>   Приклад сюди не підключати нижче створюєм нове підключення -->
   </body>
 </html>
