--- a/src/index.html
+++ b/src/index.html
@@ -66,8 +66,12 @@
     <!----- Explore our new chocolate first ------>
     <!-- <load src="partials/" /> -->
 
-    <!------------ JS ----------->
-    <!-- <script type="module" src="./src/js/main.js"></script>   Приклад сюди не підключати нижче створюєм нове підключення -->
+    <!----- btn-scroll-header ------>
+    <load src="partials/btn-scroll-header.html" />
 
+    <!------------ JS ----------->
+    <!-- <script type="module" src="./js/main.js"></script>   Приклад сюди не підключати нижче створюєм нове підключення -->
+    <!----- btn-scroll-header ------>
+    <script type="module" src="./js/btn-scroll-header.js"></script>
   </body>
 </html>
