--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <!--------- SWIPER.JS STYLES -------->
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
     <!------------ CSS ----------->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -40,7 +45,7 @@
       <!-- <load src="partials/" /> -->
 
       <!-------- Our products ------>
-      <!-- <load src="partials/" /> -->
+      <load src="./partials/our-products-section.html"/>
 
       <!-------- Top sellers ------->
       <load src="partials/top-sellers.html" />
@@ -73,5 +78,8 @@
     <!-- <script type="module" src="./js/main.js"></script>   Приклад сюди не підключати нижче створюєм нове підключення -->
     <!----- btn-scroll-header ------>
     <script type="module" src="./js/btn-scroll-header.js"></script>
+    <!--------- OUR-PRODUCTS-SLIDER -------->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="./js/our-products-slider.js"></script>
   </body>
 </html>
