--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,9 @@
     <load src="partials/btn-scroll-header.html" />
 
     <!------------ JS ----------->
-    <!-- <script type="module" src="./js/main.js"></script>   Приклад сюди не підключати нижче створюєм нове підключення -->
     <!----- btn-scroll-header ------>
     <script type="module" src="./js/btn-scroll-header.js"></script>
+    <!----- heder-fixed-scrol ------>
+    <script type="module" src="./js/heder-fixed-scrol.js"></script>
   </body>
 </html>
