--- a/src/index.html
+++ b/src/index.html
@@ -74,5 +74,7 @@
     <script type="module" src="./js/btn-scroll-header.js"></script>
     <!----- heder-fixed-scrol ------>
     <script type="module" src="./js/heder-fixed-scrol.js"></script>
+    <!------- modal-form ------->
+    <script type="module" src="./js/modal-form.js"></script>
   </body>
 </html>
