--- a/src/index.html
+++ b/src/index.html
@@ -1,80 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!---------- Favicon --------->
-    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chocolate site Team project</title>
-    <!----------- Fonts ---------->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <!--------- Normalize -------->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
-    <!------------ CSS ----------->
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!------------ Header ----------->
+
+<head>
+  <meta charset="UTF-8" />
+  <!---------- Favicon --------->
+  <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chocolate site Team project</title>
+  <!----------- Fonts ---------->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Roboto&display=swap"
+    rel="stylesheet" />
+  <!--------- swiper -------->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <!--------- Normalize -------->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+  <!------------ CSS ----------->
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <!------------ Header ----------->
+  <!-- <load src="partials/" /> -->
+
+  <!------------ Main ------------->
+  <main>
+    <!------------ Hero ----------->
     <!-- <load src="partials/" /> -->
 
-    <!------------ Main ------------->
-    <main>
-      <!------------ Hero ----------->
-      <!-- <load src="partials/" /> -->
-
-      <!------ Advantages ---------->
-      <!-- <load src="partials/" /> -->
-
-      <!----- Unique components ---->
-      <!-- <load src="partials/" /> -->
-
-      <!------ How its made? ------->
-      <!-- <load src="partials/" /> -->
-
-      <!-------- Our products ------>
-      <!-- <load src="partials/" /> -->
-
-      <!-------- Top sellers ------->
-      <load src="partials/top-sellers.html" />
-
-      <!---------- Reviews --------->
-      <!-- <load src="partials/" /> -->
-
-      <!---------- Subscribe ------->
-      <!-- <load src="partials/" /> -->
-    </main>
-
-    <!------------ Footer ---------->
+    <!------ Advantages ---------->
     <!-- <load src="partials/" /> -->
 
-    <!------------ Modal ----------->
-
-    <!------------ Buy now --------->
+    <!----- Unique components ---->
     <!-- <load src="partials/" /> -->
 
-    <!---- Leave a review about our chocolate ---->
+    <!------ How its made? ------->
     <!-- <load src="partials/" /> -->
 
-    <!----- Explore our new chocolate first ------>
+    <!-------- Our products ------>
     <!-- <load src="partials/" /> -->
 
-    <!----- btn-scroll-header ------>
-    <load src="partials/btn-scroll-header.html" />
+    <!-------- Top sellers ------->
+    <load src="partials/top-sellers.html" />
 
-    <!------------ JS ----------->
-    <!----- btn-scroll-header ------>
-    <script type="module" src="./js/btn-scroll-header.js"></script>
-    <!----- heder-fixed-scrol ------>
-    <script type="module" src="./js/heder-fixed-scrol.js"></script>
-    <!------- modal-form ------->
-    <script type="module" src="./js/modal-form.js"></script>
-  </body>
+    <!---------- Reviews --------->
+    <load src="partials/reviews.html" />
+
+    <!---------- Subscribe ------->
+    <!-- <load src="partials/" /> -->
+  </main>
+
+  <!------------ Footer ---------->
+  <!-- <load src="partials/" /> -->
+
+  <!------------ Modal ----------->
+
+  <!------------ Buy now --------->
+  <!-- <load src="partials/" /> -->
+
+  <!---- Leave a review about our chocolate ---->
+  <!-- <load src="partials/" /> -->
+
+  <!----- Explore our new chocolate first ------>
+  <!-- <load src="partials/" /> -->
+
+  <!----- btn-scroll-header ------>
+  <load src="partials/btn-scroll-header.html" />
+
+  <!------------ JS ----------->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <!----- btn-scroll-header ------>
+  <script type="module" src="./js/btn-scroll-header.js"></script>
+  <!----- heder-fixed-scrol ------>
+  <script type="module" src="./js/heder-fixed-scrol.js"></script>
+  <!------- modal-form ------->
+  <script type="module" src="./js/modal-form.js"></script>
+  <!------- reviews-swiper ------->
+  <script src="./js/swiper-reviews.js"></script>
+</body>
+
 </html>
