--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!------------ Header ----------->
-    <!-- <load src="partials/" /> -->
+    <load src="./partials/header.html" />
 
     <!------------ Main ------------->
     <main>
@@ -43,7 +43,7 @@
       <!-- <load src="partials/" /> -->
 
       <!-------- Top sellers ------->
-      <load src="partials/top-sellers.html" />
+      <!-- <load src="partials/top-sellers.html" /> -->
 
       <!---------- Reviews --------->
       <!-- <load src="partials/" /> -->
@@ -68,6 +68,12 @@
 
     <!------------ JS ----------->
     <!-- <script type="module" src="./src/js/main.js"></script>   Приклад сюди не підключати нижче створюєм нове підключення -->
-
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/hamburger.js"></script>
   </body>
 </html>
