--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
       <!-- <load src="partials/" /> -->
 
       <!---------- Subscribe ------->
-      <!-- <load src="partials/" /> -->
+      <load src="partials/subscribe.html" />
     </main>
 
     <!------------ Footer ---------->
@@ -68,6 +68,5 @@
 
     <!------------ JS ----------->
     <!-- <script type="module" src="./src/js/main.js"></script>   Приклад сюди не підключати нижче створюєм нове підключення -->
-
   </body>
 </html>
