added html and css

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     </main>
 
     <!------------ Footer ---------->
-    <!-- <load src="partials/" /> -->
+    <load src="./partials/footer.html" /> 
 
     <!------------ Modal ----------->
 
