--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!---------- Favicon --------->
-    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chocolate site Team project</title>
     <!----------- Fonts ---------->
@@ -20,8 +20,8 @@
     />
     <!--------- SWIPER.JS STYLES -------->
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
     <!------------ CSS ----------->
     <link rel="stylesheet" href="./css/styles.css" />
@@ -45,7 +45,7 @@
       <!-- <load src="partials/" /> -->
 
       <!-------- Our products ------>
-      <load src="./partials/our-products-section.html"/>
+      <load src="./partials/our-products-section.html" />
 
       <!-------- Top sellers ------->
       <load src="partials/top-sellers.html" />
@@ -71,7 +71,7 @@
     <!----- Explore our new chocolate first ------>
     <!-- <load src="partials/" /> -->
 
-    <!----- btn-scroll-header ------>
+    <!----- Btn-scroll-header ------>
     <load src="partials/btn-scroll-header.html" />
 
     <!------------ JS ----------->
@@ -82,10 +82,9 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./js/our-products-slider.js"></script>
 
-    <!----- heder-fixed-scrol ------>
+    <!----- Heder-fixed-scrol ------>
     <script type="module" src="./js/heder-fixed-scrol.js"></script>
-    <!------- modal-form ------->
+    <!------- Modal-form ------->
     <script type="module" src="./js/modal-form.js"></script>
-
   </body>
 </html>
