--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
       <load src="./partials/our-products-section.html" />
 
       <!-------- Top sellers ------->
-      <!-- <load src="partials/top-sellers.html" /> -->
+      <load src="partials/top-sellers.html" />
 
       <!---------- Reviews --------->
       <!-- <load src="partials/" /> -->
