--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <!------------ Main ------------->
     <main>
       <!------------ Hero ----------->
-      <!-- <load src="partials/" /> -->
+      <load src="partials/hero.html" />
 
       <!------ Advantages ---------->
       <!-- <load src="partials/" /> -->
