how-its-made-update

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <!-- <load src="partials/" /> -->
 
       <!------ How its made? ------->
-      <!-- <load src="partials/" /> -->
+      <load src="./partials/How-its-made.html" />
 
       <!-------- Our products ------>
       <!-- <load src="partials/" /> -->
