--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,16 @@
     <!------------ Main ------------->
     <main>
       <!------------ Hero ----------->
-      <load src="partials/hero.html" />
+      <load src="./partials/hero.html" />
 
       <!------ Advantages ---------->
-      <!-- <load src="partials/" /> -->
+      <!-- <load src="./partials/" /> -->
 
       <!----- Unique components ---->
-      <!-- <load src="partials/" /> -->
+      <!-- <load src="./partials/" /> -->
+
+      <!------------ Buy now --------->
+      <!-- <load src="./partials/" /> -->
 
       <!------ How its made? ------->
       <load src="./partials/How-its-made.html" />
@@ -48,81 +51,58 @@
       <load src="./partials/our-products-section.html" />
 
       <!-------- Top sellers ------->
-      <load src="partials/top-sellers.html" />
+      <load src="./partials/top-sellers.html" />
 
       <!---------- Reviews --------->
-      <!-- <load src="partials/" /> -->
+      <load src="./partials/reviews.html" />
 
       <!---------- Subscribe ------->
-      <!-- <load src="partials/" /> -->
+      <!-- <load src="./partials/" /> -->
     </main>
 
     <!------------ Footer ---------->
-    <load src="./partials/footer.html" /> 
+    <load src="./partials/footer.html" />
 
     <!------------ Modal ----------->
 
     <!------------ Buy now --------->
-    <!-- <load src="partials/" /> -->
+    <!-- <load src="./partials/" /> -->
 
-    <!------ How its made? ------->
-    <!-- <load src="partials/" /> -->
+    <!---- Leave a review about our chocolate ---->
+    <!-- <load src="./partials/" /> -->
 
-    <!-------- Our products ------>
-    <load src="./partials/our-products-section.html" />
+    <!----- Explore our new chocolate first ------>
+    <!-- <load src="./partials/" /> -->
 
-    <!-------- Top sellers ------->
-    <load src="partials/top-sellers.html" />
+    <!----- Btn-scroll-header ------>
+    <load src="./partials/btn-scroll-header.html" />
 
-    <!---------- Reviews --------->
-    <load src="partials/reviews.html" />
+    <!------------ JS ----------->
 
-    <!---------- Subscribe ------->
-    <!-- <load src="partials/" /> -->
-  </main>
+    <!------- hamburger-menu -------->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/hamburger.js"></script>
 
-  <!------------ Footer ---------->
-  <load src="./partials/footer.html" />
+    <!----- btn-scroll-header ------>
+    <script type="module" src="./js/btn-scroll-header.js"></script>
 
-  <!------------ Modal ----------->
+    <!--------- SLIDER -------->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
-  <!------------ Buy now --------->
-  <!-- <load src="partials/" /> -->
+    <!--------- OUR-PRODUCTS-SLIDER -------->
+    <script src="./js/our-products-slider.js"></script>
 
-  <!---- Leave a review about our chocolate ---->
-  <!-- <load src="partials/" /> -->
+    <!--------- REVIEWS-SLIDER -------->
+    <script src="./js/swiper-reviews.js"></script>
 
-  <!----- Explore our new chocolate first ------>
-  <!-- <load src="partials/" /> -->
-
-  <!----- Btn-scroll-header ------>
-  <load src="partials/btn-scroll-header.html" />
-
-  <!------------ JS ----------->
-
-
-  <!------- hamburger-menu -------->
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-    crossorigin="anonymous"></script>
-  <script src="./js/hamburger.js"></script>
-
-  <!----- btn-scroll-header ------>
-  <script type="module" src="./js/btn-scroll-header.js"></script>
-
-  <!--------- SLIDER -------->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-
-  <!--------- OUR-PRODUCTS-SLIDER -------->
-  <script src="./js/our-products-slider.js"></script>
-
-  <!--------- REVIEWS-SLIDER -------->
-  <script src="./js/swiper-reviews.js"></script>
-
-  <!----- Heder-fixed-scrol ------>
-  <script type="module" src="./js/heder-fixed-scrol.js"></script>
-  <!------- Modal-form ------->
-  <script type="module" src="./js/modal-form.js"></script>
-</body>
-
+    <!----- Heder-fixed-scrol ------>
+    <script type="module" src="./js/heder-fixed-scrol.js"></script>
+    <!------- Modal-form ------->
+    <script type="module" src="./js/modal-form.js"></script>
+  </body>
 </html>
