--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       <!-- <load src="./partials/" /> -->
 
       <!------ How its made? ------->
-      <load src="./partials/How-its-made.html" />
+      <load src="./partials/how-its-made.html" />
 
       <!-------- Our products ------>
       <load src="./partials/our-products-section.html" />
