--- a/src/index.html
+++ b/src/index.html
@@ -68,5 +68,12 @@
 
     <!------------ JS ----------->
     <!-- <script type="module" src="./src/js/main.js"></script>   Приклад сюди не підключати нижче створюєм нове підключення -->
+    <script src="./js/explore-modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
