explore-our-new

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
     <!-- <load src="./partials/" /> -->
 
     <!----- Explore our new chocolate first ------>
-    <!-- <load src="./partials/" /> -->
+    <load src="./partials/explore-our-new-chocolate-first.html" />
 
     <!----- Btn-scroll-header ------>
     <load src="./partials/btn-scroll-header.html" />
