--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
     <script src="./js/hamburger.js"></script>
 
     <!----- btn-scroll-header ------>
-    <script type="module" src="./js/btn-scroll-header.js"></script>
+    <!-- <script type="module" src="./js/btn-scroll-header.js"></script> -->
 
     <!--------- SLIDER -------->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
