--- a/src/index.html
+++ b/src/index.html
@@ -86,19 +86,19 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script src="./js/hamburger.js"></script>
+    <script type="module" src="./js/hamburger.js"></script>
 
     <!----- btn-scroll-header ------>
     <script type="module" src="./js/btn-scroll-header.js"></script>
 
     <!--------- SLIDER -------->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <!--------- OUR-PRODUCTS-SLIDER -------->
-    <script src="./js/our-products-slider.js"></script>
+    <script type="module" src="./js/our-products-slider.js"></script>
 
     <!--------- REVIEWS-SLIDER -------->
-    <script src="./js/swiper-reviews.js"></script>
+    <script type="module" src="./js/swiper-reviews.js"></script>
 
     <!----- Heder-fixed-scrol ------>
     <script type="module" src="./js/heder-fixed-scrol.js"></script>
