--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
    
 
     <!---- Leave a review about our chocolate ---->
-    
+    <load src="./partials/modal-review.html" />
 
     <!----- Explore our new chocolate first ------>
     <load src="./partials/explore-our-new-chocolate-first.html" />
