--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!---------- Favicon --------->
-    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chocolate site Team project</title>
     <!----------- Fonts ---------->
@@ -87,10 +87,7 @@
     <script type="module" src="./js/btn-scroll-header.js"></script>
 
     <!--------- SLIDER -------->
-    <script
-      type="module"
-      src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <!--------- OUR-PRODUCTS-SLIDER -------->
     <script type="module" src="./js/our-products-slider.js"></script>
@@ -103,5 +100,7 @@
 
     <!------- Modal-form ------->
     <script type="module" src="./js/modal-form.js"></script>
+    <script type="module" src="./js/modal-form-1.js"></script>
+    <script type="module" src="./js/modal-form-2.js"></script>
   </body>
 </html>
