--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
     <!------------ Modal ----------->
 
     <!------------ Buy now --------->
-    <!-- <load src="partials/" /> -->
+    <load src="partials/buy-now.html" />
 
     <!---- Leave a review about our chocolate ---->
     <!-- <load src="partials/" /> -->
@@ -86,6 +86,7 @@
     <script type="module" src="./js/heder-fixed-scrol.js"></script>
     <!------- modal-form ------->
     <script type="module" src="./js/modal-form.js"></script>
+    <script type="module" src="./js/buy-now.js"></script>
 
   </body>
 </html>
