--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,7 @@
       <load src="./partials/hero.html" />
 
       <!------ Advantages ---------->
-<<<<<<< Updated upstream
-=======
-      <load src="partials/advantages.html" />
->>>>>>> Stashed changes
+      <load src="./partials/advantages.html" />
 
       <!----- Unique components ---->
       <load src="./partials/unique-components.html" />
@@ -67,7 +64,7 @@
     <!------------ Modal ----------->
 
     <!------------ Buy now --------->
-    <load src="partials/buy-now.html" />
+    <load src="./partials/buy-now.html" />
 
     <!---- Leave a review about our chocolate ---->
     <load src="./partials/modal-review.html" />
