--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,6 @@
       <load src="./partials/hero.html" />
 
       <!------ Advantages ---------->
-    
 
       <!----- Unique components ---->
       <load src="./partials/unique-components.html" />
@@ -101,8 +100,9 @@
     <script type="module" src="./js/heder-fixed-scrol.js"></script>
 
     <!------- Modal-form ------->
-    <script type="module" src="./js/modal-form.js"></script>
-    <script type="module" src="./js/modal-form-1.js"></script>
-    <script type="module" src="./js/modal-form-2.js"></script>
+    <script type="module" src="./js/modal-button-hero.js"></script>
+    <script type="module" src="./js/modal-button-top-sellers.js"></script>
+    <script type="module" src="./js/modal-review.js"></script>
+    <script type="module" src="./js/modal-explore.js"></script>
   </body>
 </html>
