--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
       <load src="./partials/hero.html" />
 
       <!------ Advantages ---------->
+      <load src="./partials/advantages.html" />
 
       <!----- Unique components ---->
       <load src="./partials/unique-components.html" />
