--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
     <load src="./partials/btn-scroll-header.html" />
 
     <!------------ JS ----------->
-    <!------- hamburger-menu -------->
+    <!------- Hamburger-menu -------->
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
@@ -85,7 +85,7 @@
     ></script>
     <script type="module" src="./js/hamburger.js"></script>
 
-    <!----- btn-scroll-header ------>
+    <!----- Btn-scroll-header ------>
     <script type="module" src="./js/btn-scroll-header.js"></script>
 
     <!--------- SLIDER -------->
@@ -105,5 +105,8 @@
     <script type="module" src="./js/modal-button-top-sellers.js"></script>
     <script type="module" src="./js/modal-review.js"></script>
     <script type="module" src="./js/modal-explore.js"></script>
+
+    <!---- Smooth-scrolling ---->
+    <script type="module" src="./js/smooth-scrolling.js"></script>
   </body>
 </html>
