--- a/src/index.html
+++ b/src/index.html
@@ -108,5 +108,8 @@
 
     <!---- Smooth-scrolling ---->
     <script type="module" src="./js/smooth-scrolling.js"></script>
+
+     <!------ Video ------->
+     <script type="module" src="./js/video.js"></script>
   </body>
 </html>
