--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <!---------- Favicon --------->
     <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chocolate site Team project</title>
+    <title>Simply chocolate</title>
     <!----------- Fonts ---------->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
