--- a/src/index.html
+++ b/src/index.html
@@ -2,81 +2,81 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!---------- Favicon --------->
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simply chocolate</title>
-    <!----------- Fonts ---------->
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <!--------- Normalize -------->
+    <!-- Normalize -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <!--------- SWIPER.JS STYLES -------->
+    <!-- SWIPER.JS STYLES -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
-    <!------------ CSS ----------->
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <!------------ Header ----------->
+    <!-- Header -->
     <load src="./partials/header.html" />
 
-    <!------------ Main ------------->
+    <!-- Main -->
     <main>
-      <!------------ Hero ----------->
+      <!-- Hero -->
       <load src="./partials/hero.html" />
 
-      <!------ Advantages ---------->
+      <!-- Advantages -->
       <load src="./partials/advantages.html" />
 
-      <!----- Unique components ---->
+      <!-- Unique components -->
       <load src="./partials/unique-components.html" />
 
-      <!------ How its made? ------->
+      <!-- How its made? -->
       <load src="./partials/how-its-made.html" />
 
-      <!-------- Our products ------>
+      <!-- Our products -->
       <load src="./partials/our-products-section.html" />
 
-      <!-------- Top sellers ------->
+      <!-- Top sellers -->
       <load src="./partials/top-sellers.html" />
 
-      <!---------- Reviews --------->
+      <!-- Reviews -->
       <load src="./partials/reviews.html" />
 
-      <!---------- Subscribe ------->
+      <!-- Subscribe -->
       <load src="./partials/subscribe.html" />
     </main>
 
-    <!------------ Footer ---------->
+    <!-- Footer -->
     <load src="./partials/footer.html" />
 
-    <!------------ Modal ----------->
+    <!--Modal -->
 
-    <!------------ Buy now --------->
+    <!-- Buy now -->
     <load src="./partials/buy-now.html" />
 
-    <!---- Leave a review about our chocolate ---->
+    <!-- Leave a review about our chocolate -->
     <load src="./partials/modal-review.html" />
 
-    <!----- Explore our new chocolate first ------>
+    <!-- Explore our new chocolate first -->
     <load src="./partials/explore-our-new-chocolate-first.html" />
 
-    <!----- Btn-scroll-header ------>
+    <!-- Btn-scroll-header -->
     <load src="./partials/btn-scroll-header.html" />
 
-    <!------------ JS ----------->
-    <!------- Hamburger-menu -------->
+    <!-- JS -->
+    <!-- Hamburger-menu -->
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
@@ -85,28 +85,28 @@
     ></script>
     <script type="module" src="./js/hamburger.js"></script>
 
-    <!----- Btn-scroll-header ------>
+    <!-- Btn-scroll-header -->
     <script type="module" src="./js/btn-scroll-header.js"></script>
 
-    <!--------- SLIDER -------->
+    <!-- SLIDER -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
-    <!--------- OUR-PRODUCTS-SLIDER -------->
+    <!-- OUR-PRODUCTS-SLIDER -->
     <script type="module" src="./js/our-products-slider.js"></script>
 
-    <!--------- REVIEWS-SLIDER -------->
+    <!-- REVIEWS-SLIDER -->
     <script type="module" src="./js/swiper-reviews.js"></script>
 
-    <!----- Heder-fixed-scrol ------>
+    <!-- Heder-fixed-scrol -->
     <script type="module" src="./js/heder-fixed-scrol.js"></script>
 
-    <!------- Modal-form ------->
+    <!-- Modal-form -->
     <script type="module" src="./js/modal-button-hero.js"></script>
     <script type="module" src="./js/modal-button-top-sellers.js"></script>
     <script type="module" src="./js/modal-review.js"></script>
     <script type="module" src="./js/modal-explore.js"></script>
 
-    <!---- Smooth-scrolling ---->
+    <!-- Smooth-scrolling -->
     <script type="module" src="./js/smooth-scrolling.js"></script>
   </body>
 </html>
