--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,6 @@
     <script type="module" src="./js/modal-explore.js"></script>
 
     <!-- Smooth-scrolling -->
-    <script type="module" src="./js/smooth-scrolling.js"></script>
+    <!-- <script type="module" src="./js/smooth-scrolling.js"></script> -->
   </body>
 </html>
