add video section how its made

--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,9 @@
     <script type="module" src="./js/modal-button-top-sellers.js"></script>
     <script type="module" src="./js/modal-review.js"></script>
     <script type="module" src="./js/modal-explore.js"></script>
+    
+    <!-- How-its-made-click -->
+    <script type="module" src="./js/how-its-made-click.js"></script>
 
     <!-- Smooth-scrolling -->
     <!-- <script type="module" src="./js/smooth-scrolling.js"></script> -->
