--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,6 @@
     <script type="module" src="./js/how-its-made-click.js"></script>
 
     <!-- Smooth-scrolling -->
-    <!-- <script type="module" src="./js/smooth-scrolling.js"></script> -->
+    <script type="module" src="./js/smooth-scrolling.js"></script>
   </body>
 </html>
